--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "zem_contact_reborn",
-  "description": "Form mailer for Textpattern",
+  "name": "com_connect",
+  "description": "Form and contact mailer for Textpattern",
   "version": "4.6.0-beta",
   "type": 0,
   "author": "Textpattern Community",
-  "author_uri": "http://forum.textpattern.com/viewtopic.php?id=23728",
+  "author_uri": "https://forum.textpattern.io/viewtopic.php?id=47913",
   "order": 5,
   "flags": 0,
   "help": {"file" : ["./README.textile"]}
