--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "com_connect",
-  "description": "Form and contact mailer for Textpattern",
+  "description": "Form and contact mailer plugin for Textpattern CMS",
   "version": "4.6.0-beta",
   "type": 0,
   "author": "Textpattern Community",
